--- a/projects/moultoje/dominion/Makefile
+++ b/projects/moultoje/dominion/Makefile
@@ -24,11 +24,69 @@ testAll: dominion.o testSuite.c
 interface.o: interface.h interface.c
 	gcc -c interface.c -g  $(CFLAGS)
 
+testHelpers.o: testHelpers.c testHelpers.h
+	gcc -c testHelpers.c -g $(CFLAGS)
+
+unittest1: unittest1.c dominion.o rngs.o testHelpers.o
+	gcc -o unittest1 -g unittest1.c dominion.o rngs.o testHelpers.o $(CFLAGS)
+
+unittest2: unittest2.c dominion.o rngs.o testHelpers.o
+	gcc -o unittest2 -g unittest2.c dominion.o rngs.o testHelpers.o $(CFLAGS)
+
+unittest3: unittest3.c dominion.o rngs.o testHelpers.o
+	gcc -o unittest3 -g unittest3.c dominion.o rngs.o testHelpers.o $(CFLAGS)
+
+unittest4: unittest4.c dominion.o rngs.o testHelpers.o
+	gcc -o unittest4 -g unittest4.c dominion.o rngs.o testHelpers.o $(CFLAGS)
+
+cardtest1: cardtest1.c dominion.o rngs.o testHelpers.o
+	gcc -o cardtest1 -g cardtest1.c dominion.o rngs.o testHelpers.o $(CFLAGS)
+
+cardtest2: cardtest2.c dominion.o rngs.o testHelpers.o
+	gcc -o cardtest2 -g cardtest2.c dominion.o rngs.o testHelpers.o $(CFLAGS)
+
+cardtest3: cardtest3.c dominion.o rngs.o testHelpers.o
+	gcc -o cardtest3 -g cardtest3.c dominion.o rngs.o testHelpers.o $(CFLAGS)
+
+cardtest4: cardtest4.c dominion.o rngs.o testHelpers.o
+	gcc -o cardtest4 -g cardtest4.c dominion.o rngs.o testHelpers.o $(CFLAGS)
+
 runtests: testDrawCard 
 	./testDrawCard &> unittestresult.out
 	gcov dominion.c >> unittestresult.out
 	cat dominion.c.gcov >> unittestresult.out
 
+unittestresult: unittest1 unittest2 unittest3 unittest4 cardtest1 cardtest2 cardtest3 cardtest4
+	echo -e "UNIT TESTS\n" > unittestresult.out
+	echo -e "Unittest1\n" >> unittestresult.out
+	./unittest1 &>> unittestresult.out
+	gcov dominion.c >> unittestresult.out
+	echo -e "\nUnittest2\n" >> unittestresult.out
+	./unittest2 &>> unittestresult.out
+	gcov dominion.c >> unittestresult.out
+	echo -e "\nUnittest3\n" >> unittestresult.out
+	./unittest3 &>> unittestresult.out
+	gcov dominion.c >> unittestresult.out
+	echo -e "\nUnittest4\n" >> unittestresult.out
+	./unittest4 &>> unittestresult.out
+	gcov dominion.c >> unittestresult.out
+	echo -e "\nCARD TESTS\n" >> unittestresult.out
+	echo -e "Cardtest1\n" >> unittestresult.out
+	./cardtest1 &>> unittestresult.out
+	gcov dominion.c >> unittestresult.out
+	echo -e "Cardtest2\n" >> unittestresult.out
+	./cardtest2 &>> unittestresult.out
+	gcov dominion.c >> unittestresult.out
+	echo -e "Cardtest3\n" >> unittestresult.out
+	./cardtest3 &>> unittestresult.out
+	gcov dominion.c >> unittestresult.out
+	echo -e "Cardtest4\n" >> unittestresult.out
+	./cardtest4 &>> unittestresult.out
+	gcov dominion.c >> unittestresult.out
+	echo -e "\nDetailed gcov coverage results\n" >> unittestresult.out
+	gcov dominion.c -fb >> unittestresult.out
+	echo -e "\ngcov data for dominion.c\n" >> unittestresult.out
+	cat dominion.c.gcov >> unittestresult.out
 
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
@@ -36,4 +94,4 @@ player: player.c interface.o
 all: playdom player 
 
 clean:
-	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe
+	rm -f *.o playdom.exe playdom player player.exe unittest1 unittest2 unittest3 unittest4 cardtest1 cardtest2 cardtest3 cardtest4 *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe
