Small changes for turning in

--- a/projects/moultoje/dominion/Makefile
+++ b/projects/moultoje/dominion/Makefile
@@ -49,7 +49,7 @@ randomtestresults: randomtestadventurer randomtestcard1 randomtestcard2
 	echo -e "\nRandom Test -- Baron\n" >> randomtestresults.out
 	time ./randomtestcard2 &>> randomtestresults.out
 	gcov dominion.c >> randomtestresults.out
-	echo -e "\nDetailed gcove coverage results\n" >> randomtestresults.out
+	echo -e "\nDetailed gcov coverage results\n" >> randomtestresults.out
 	gcov dominion.c -fb >> randomtestresults.out
 	echo -e "\ngcov data for dominion.c\n" >> randomtestresults.out
 	cat dominion.c.gcov >> randomtestresults.out
